# pandaPIpgrRepairVerify

./: CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarks/: readme.txt
benchmarks/kitchen-100/00-domain/: domain.hddl
benchmarks/kitchen-100/01-problems/: p-0003-kitchen.hddl  p-0012-kitchen.hddl  p-0032-kitchen.hddl  p-0044-kitchen.hddl  p-0059-kitchen.hddl  p-0073-kitchen.hddl  p-0079-kitchen.hddl  p-0081-kitchen.hddl  p-0089-kitchen.hddl  p-0090-kitchen.hddl  p-0110-kitchen.hddl  p-0116-kitchen.hddl  p-0121-kitchen.hddl  p-0132-kitchen.hddl  p-0134-kitchen.hddl  p-0139-kitchen.hddl  p-0154-kitchen.hddl  p-0156-kitchen.hddl  p-0158-kitchen.hddl  p-0182-kitchen.hddl  p-0190-kitchen.hddl  p-0205-kitchen.hddl  p-0221-kitchen.hddl  p-0239-kitchen.hddl  p-0246-kitchen.hddl  p-0250-kitchen.hddl  p-0252-kitchen.hddl  p-0265-kitchen.hddl  p-0266-kitchen.hddl  p-0278-kitchen.hddl  p-0293-kitchen.hddl  p-0294-kitchen.hddl  p-0303-kitchen.hddl  p-0307-kitchen.hddl  p-0319-kitchen.hddl  p-0320-kitchen.hddl  p-0328-kitchen.hddl  p-0330-kitchen.hddl  p-0336-kitchen.hddl  p-0343-kitchen.hddl  (+60 more)
benchmarks/kitchen-100/02-solutions/: p-0003-kitchen.txt  p-0012-kitchen.txt  p-0032-kitchen.txt  p-0044-kitchen.txt  p-0059-kitchen.txt  p-0073-kitchen.txt  p-0079-kitchen.txt  p-0081-kitchen.txt  p-0089-kitchen.txt  p-0090-kitchen.txt  p-0110-kitchen.txt  p-0116-kitchen.txt  p-0121-kitchen.txt  p-0132-kitchen.txt  p-0134-kitchen.txt  p-0139-kitchen.txt  p-0154-kitchen.txt  p-0156-kitchen.txt  p-0158-kitchen.txt  p-0182-kitchen.txt  p-0190-kitchen.txt  p-0205-kitchen.txt  p-0221-kitchen.txt  p-0239-kitchen.txt  p-0246-kitchen.txt  p-0250-kitchen.txt  p-0252-kitchen.txt  p-0265-kitchen.txt  p-0266-kitchen.txt  p-0278-kitchen.txt  p-0293-kitchen.txt  p-0294-kitchen.txt  p-0303-kitchen.txt  p-0307-kitchen.txt  p-0319-kitchen.txt  p-0320-kitchen.txt  p-0328-kitchen.txt  p-0330-kitchen.txt  p-0336-kitchen.txt  p-0343-kitchen.txt  (+60 more)
benchmarks/monroe-100/00-domain/: domain.hddl
benchmarks/monroe-100/02-solutions/: solution-0001.txt  solution-0002.txt  solution-0003.txt  solution-0004.txt  solution-0005.txt  solution-0006.txt  solution-0007.txt  solution-0008.txt  solution-0009.txt  solution-0010.txt  solution-0011.txt  solution-0012.txt  solution-0013.txt  solution-0014.txt  solution-0015.txt  solution-0016.txt  solution-0017.txt  solution-0018.txt  solution-0019.txt  solution-0020.txt  solution-0021.txt  solution-0022.txt  solution-0023.txt  solution-0024.txt  solution-0025.txt  solution-0026.txt  solution-0027.txt  solution-0028.txt  solution-0029.txt  solution-0030.txt  solution-0031.txt  solution-0032.txt  solution-0033.txt  solution-0034.txt  solution-0035.txt  solution-0036.txt  solution-0037.txt  solution-0038.txt  solution-0039.txt  solution-0040.txt  (+60 more)
example-input/: sas_plan  sas_plan.verify
example-pgr/: pgr.sh
example-verify/: domain-pfile01.psas  panda.output
htnModel/: Model.cpp  Model.h  ProgressionNetwork.cpp  ProgressionNetwork.h
prefEncoding/: GroundPrefixEncoding.cpp  GroundPrefixEncoding.h
to-verifier/: CMakeLists.txt
to-verifier/include/: verifier.h
to-verifier/to_verifier/include/: method_graph.h
to-verifier/util/include/: execution.h  mapping.h  mark.h  util.h
utils/: IntUtil.h  StringUtil.cpp  StringUtil.h
verification/: GroundVerifier.cpp  GroundVerifier.h
verifier/: CMakeLists.txt
verifier/to_verifier/: method_graph.h
verifier/util/: execution.h  mapping.h  mark.h  util.h
